@@ -158,7 +158,7 @@ dependencies {
 
     // Spark
     implementation("me.lucko:spark-api:0.1-20240720.200737-2")
-    implementation("me.lucko:spark-paper:1.10.152")
+    implementation("me.lucko:spark-paper:1.10.172")
 }
 
 tasks.jar {
@@ -277,12 +277,7 @@ fun TaskContainer.registerRunTask(
         // TODO - JB runtime 25 has issues with spark rn
         // vendor.set(JvmVendorSpec.JETBRAINS)
     })
-    jvmArgs("-XX:+AllowEnhancedClassRedefinition",
-        "-Dfile.encoding=UTF-8",
-        "-Xverify:none",
-        "-Dpaper.disablePluginRemapping=true",
-        "-Dio.papermc.paper.suppress.sout.nags=true",
-        "-Dpaper.disableStartupVersionCheck=true")
+    jvmArgs(/*"-XX:+AllowEnhancedClassRedefinition", */"--enable-native-access=ALL-UNNAMED", "-Dfile.encoding=UTF-8", "-Dio.papermc.paper.suppress.sout.nags=true")
 
     if (rootProject.childProjects["test-plugin"] != null) {
         val testPluginJar = rootProject.project(":test-plugin").tasks.jar.flatMap { it.archiveFile }
